<resources>
    <string name="BML_NOTIFY_CONTENT_ERROR_ARIBDC_OPEN">Unable to obtain data</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_ARIBDC_READ">Unable to read data</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_ARIBDC_TIMEDOUT">Timed out while reading data</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_AUTH_FORMAT">Incorrect authentication parameter</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_AUTH_UNKNOWN">Authentication type not supported</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_BROADCAST_TRANSITON">Invalid content transition</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_CACHE_EXPIRE">Page expired from cache</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_CACHE_NONE">Page not found in cache</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_CROSSMEDIA">Unable to obtain some content</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_DNS_INVAL">Check DNS settings</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_DNS_INVAL_TVCALL">Unable to connect to network during TV call</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_DNS_NOSERVER">Server not found</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_DNS_NOTFOUND">DNS not set</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_DNS_TIMEOUT">DNS timed out</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_DOMAIN">Address not in communication domain</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_FILE_OPEN">Unable to open file</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_FILE_READ">Unable to read data</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_GENERIC">Error</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_NO_CONTENT">Page unavailable</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_REDIRECT_CANCELED">Reading cancelled</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_REDIRECT_FORMAT">Unable to redirect.</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_REQTIMEOUT">Connection timed out</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_REQ_BODY_SIZEOVER">HTTP request body too large</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_REQ_HEADER_SIZEOVER">HTTP request header too large</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_RESPTIMEOUT">Connection timed out</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_SSL">Error occurred while connecting to SSL</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_TCP">Unable to connect</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_TOOMANYAUTH">Unable to authenticate</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_TOO_MANY_REDIRECT">Unable to redirect.</string>
    <string name="BML_NOTIFY_CONTENT_ERROR_UNKNOWN">Page may not display correctly</string>
    <string name="BML_NOTIFY_DTV_DRAWERROR_TIMEDOUT">Drawing time too long. Process timed out</string>
    <string name="BML_NOTIFY_DTV_DRAWERROR_TOOMANY_NESTS">Drawing failed. Block element nesting too deep</string>
    <string name="BML_NOTIFY_DTV_FAILUREACTION_ILLEGALFUNCTION">Invalid script. Try again</string>
    <string name="BML_NOTIFY_DTV_FAILUREACTION_INVALIDSUFFIX">Unable to display content</string>
    <string name="BML_NOTIFY_DTV_FAILUREACTION_OUTOFBASEURIDIRECTORY">Invalid content. Try again</string>
    <string name="BML_NOTIFY_ERROR_BADMIMETYPE">Incorrect page content</string>
    <string name="BML_NOTIFY_ERROR_BADURL">Invalid URL</string>
    <string name="BML_NOTIFY_ERROR_MIXEDSECURETYPE">Combination of protected and unprotected pages</string>
    <string name="BML_NOTIFY_ERROR_NOMEMORY">Not enough memory in save destination</string>
    <string name="BML_NOTIFY_ERROR_TOTAL_SIZEOVER">Page too large. May not display correctly</string>
    <string name="BML_NOTIFY_HTTP_E_AUTH_NOHEADER">Incorrect authentication parameter</string>
    <string name="BML_NOTIFY_HTTP_E_REQ_TOOMANYCONTINUE">Unable to read page</string>
    <string name="BML_QUERY_DTV_PERMITFUNCTION_X_DPA_getCurPos">Position information needed. Continue?</string>
    <string name="BML_QUERY_DTV_PERMITFUNCTION_X_DPA_getIRDID">IRD ID needed. Continue?</string>
    <string name="BML_QUERY_DTV_PERMITFUNCTION_X_DPA_getRcvCond">Signal status needed. Continue?</string>
    <string name="BML_QUERY_DTV_PERMITFUNCTION_X_DPA_mailTo">Email will be sent. Continue?</string>
    <string name="BML_QUERY_DTV_PERMITFUNCTION_X_DPA_phoneTo">Call will be started. Continue?</string>
    <string name="BML_QUERY_DTV_PERMITFUNCTION_X_DPA_startResidentApp">Another application will be opened. Continue?</string>
    <string name="BML_QUERY_DTV_PERMITFUNCTION_X_DPA_writeAddressBookInfo">Contacts will be opened. Continue?</string>
    <string name="BML_QUERY_DTV_PERMITFUNCTION_X_DPA_writeCproBM">TV link will be added. Continue?</string>
    <string name="BML_QUERY_DTV_PERMITFUNCTION_X_DPA_writeSchInfo">Scheduler will be opened. Continue?</string>
    <string name="BML_QUERY_DTV_PERMITFUNCTION_saveHttpServerImageToMemoryCard">Image will be saved to phone. Continue?</string>
    <string name="BML_QUERY_DTV_PERMITFUNCTION_saveImageToMemoryCard">Image will be saved to phone. Continue?</string>
    <string name="BML_QUERY_DTV_PERMITFUNCTION_transmitTextDataOverIP">Data will be sent to server. Continue?</string>
    <string name="BML_QUERY_DTV_PERMITFUNCTION_writePersistentArray">Data will be saved for broadcast. Continue?</string>
    <string name="BML_QUERY_DTV_SYSTEMCONTINUE">Timed out. Get message?</string>
    <string name="BML_QUERY_DTV_TRANSMITTEXTDATA">Data will be sent to unprotected server. Continue?</string>
    <string name="BML_QUERY_DTV_WRITEBOOKMARK">TV link added</string>
    <string name="BML_QUERY_DTV_WRITEBOOKMARK_REPLACE_EXPIRED">TV link list full. Replace expired TV link?</string>
    <string name="BML_QUERY_DTV_WRITEBOOKMARK_REPLACE_OLDEST">TV link list full. Replace oldest TV link?</string>
    <string name="BML_QUERY_DTV_WRITEPERSISTENTARRAY">Data will be saved for broadcast. Continue?</string>
    <string name="BML_QUERY_SERVER_CERT_CONFIRM_DIALOG">Unable to confirm security of connection host</string>
    <string name="BML_QUERY_SERVER_CERT_CONFIRM_DIALOG_QEUSTION">Unable to confirm security of connection host. Connect?</string>
    <string name="BML_QUERY_SETLOCATION_HTTP">Connect to network?</string>
    <string name="BML_QUERY_SETLOCATION_SSL_BEGIN">This will transfer you to a protected site. Continue?</string>
    <string name="BML_QUERY_SETLOCATION_SSL_END">This will transfer you to an unprotected site. Continue?</string>
    <string name="BML_TITLE">Broadcast Data</string>
    <string name="CH">CH</string>
    <string name="DTV_AREA_1">Hokkaido/Tohoku</string>
    <string name="DTV_AREA_1_1">Hokkaido</string>
    <string name="DTV_AREA_1_1_1">Sapporo</string>
    <string name="DTV_AREA_1_1_10">Nayoro</string>
    <string name="DTV_AREA_1_1_11">Wakkanai</string>
    <string name="DTV_AREA_1_1_12">Abashiri</string>
    <string name="DTV_AREA_1_1_2">Asahikawa</string>
    <string name="DTV_AREA_1_1_3">Kitami</string>
    <string name="DTV_AREA_1_1_4">Obihiro</string>
    <string name="DTV_AREA_1_1_5">Kushiro</string>
    <string name="DTV_AREA_1_1_6">Muroran</string>
    <string name="DTV_AREA_1_1_7">Hakodate</string>
    <string name="DTV_AREA_1_1_8">Tomakomai</string>
    <string name="DTV_AREA_1_1_9">Otaru</string>
    <string name="DTV_AREA_1_2">Aomori</string>
    <string name="DTV_AREA_1_2_1">Aomori</string>
    <string name="DTV_AREA_1_2_2">Hachinohe</string>
    <string name="DTV_AREA_1_2_3">Mutsu</string>
    <string name="DTV_AREA_1_3">Iwate</string>
    <string name="DTV_AREA_1_3_1">Morioka</string>
    <string name="DTV_AREA_1_3_2">Kamaishi</string>
    <string name="DTV_AREA_1_3_3">Ninohe</string>
    <string name="DTV_AREA_1_4">Miyagi</string>
    <string name="DTV_AREA_1_4_1">Sendai</string>
    <string name="DTV_AREA_1_4_2">Ishinomaki</string>
    <string name="DTV_AREA_1_4_3">Kesennuma</string>
    <string name="DTV_AREA_1_5">Akita</string>
    <string name="DTV_AREA_1_5_1">Akita</string>
    <string name="DTV_AREA_1_5_2">Odate</string>
    <string name="DTV_AREA_1_5_3">Omagari</string>
    <string name="DTV_AREA_1_6">Yamagata</string>
    <string name="DTV_AREA_1_6_1">Yamagata</string>
    <string name="DTV_AREA_1_6_2">Tsuruoka</string>
    <string name="DTV_AREA_1_6_3">Yonezawa</string>
    <string name="DTV_AREA_1_7">Fukushima</string>
    <string name="DTV_AREA_1_7_1">Fukushima</string>
    <string name="DTV_AREA_1_7_2">Aizuwakamatsu</string>
    <string name="DTV_AREA_1_7_3">Iwaki</string>
    <string name="DTV_AREA_2">Kanto</string>
    <string name="DTV_AREA_2_1">Ibaraki</string>
    <string name="DTV_AREA_2_1_1">Mito</string>
    <string name="DTV_AREA_2_1_2">Hitachi</string>
    <string name="DTV_AREA_2_2">Tochigi</string>
    <string name="DTV_AREA_2_2_1">Utsunomiya</string>
    <string name="DTV_AREA_2_2_2">Yaita</string>
    <string name="DTV_AREA_2_3">Gunma</string>
    <string name="DTV_AREA_2_3_1">Maebashi</string>
    <string name="DTV_AREA_2_3_2">Kiryu</string>
    <string name="DTV_AREA_2_4">Saitama</string>
    <string name="DTV_AREA_2_4_1">Saitama</string>
    <string name="DTV_AREA_2_4_2">Kumagaya</string>
    <string name="DTV_AREA_2_4_3">Chichibu</string>
    <string name="DTV_AREA_2_5">Chiba</string>
    <string name="DTV_AREA_2_5_1">Chiba</string>
    <string name="DTV_AREA_2_5_2">Choshi</string>
    <string name="DTV_AREA_2_6">Tokyo</string>
    <string name="DTV_AREA_2_6_1">Tokyo 23 Wards</string>
    <string name="DTV_AREA_2_6_2">Hachioji</string>
    <string name="DTV_AREA_2_6_3">Tama</string>
    <string name="DTV_AREA_2_7">Kanagawa</string>
    <string name="DTV_AREA_2_7_1">Yokohama</string>
    <string name="DTV_AREA_2_7_2">Hiratsuka</string>
    <string name="DTV_AREA_2_7_3">Odawara</string>
    <string name="DTV_AREA_2_7_4">Hadano</string>
    <string name="DTV_AREA_3">Hokuriku/Koshinetsu</string>
    <string name="DTV_AREA_3_1">Niigata</string>
    <string name="DTV_AREA_3_1_1">Niigata</string>
    <string name="DTV_AREA_3_1_2">Jyoetsu</string>
    <string name="channel">Channel</string>
    <string name="debug_AppBase">AppBase</string>
    <string name="debug_BML">BML</string>
    <string name="debug_ChannelGuide">Channel Guide</string>
    <string name="debug_FW_Utility">FW_Utility</string>
    <string name="debug_Fragemnts">Fragments</string>
    <string name="debug_FrameWork">Framework</string>
    <string name="debug_Helper">Helper</string>
    <string name="debug_Live">Live</string>
    <string name="debug_Local">Local</string>
    <string name="debug_PlaybackContext">Playback Context</string>
    <string name="debug_Player">Player</string>
    <string name="debug_Reservation">Reservation</string>
    <string name="debug_TestMode">TestMode</string>
    <string name="debug_Tvlink">TvLinks</string>
    <string name="debug_UI_Common">UiCommon</string>
    <string name="debug_Utility">Utility</string>
    <string name="debug_error">Error</string>
    <string name="debug_high">High</string>
    <string name="debug_level_settings">Debug Level Settings</string>
    <string name="debug_low">Low</string>
    <string name="debug_mid">Mid</string>
    <string name="debug_module_settings">Module Settings</string>
    <string name="detected_channels">Detected Channels:</string>
    <string name="end_time">End time</string>
    <string name="file_simulation">File Simulation</string>
    <string name="max_detection_time_in_milliseconds">Max Detection Time (msecs):</string>
    <string name="min_detection_time_in_milliseconds">Min Detection time (msecs):</string>
    <string name="ok">OK</string>
    <string name="program_title">Program name</string>
    <string name="reservation_type">Reservation type</string>
    <string name="scan_time_in_milliseconds">Scan Time (msecs):</string>
    <string name="schedule">Schedule</string>
    <string name="start_time">Start time</string>
    <string name="ts_capture">TS Capture</string>
    <string name="watch_the_channel">Watch</string>
</resources>